--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   <body>
     <h1>Hello World</h1>
     <p>Hello universe</p>
+    <img src="https://raw.githubusercontent.com/camelie10/exampleWebsite/refs/heads/main/Download%20(1).jfif"></img>
   </body>
 </html>
